<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TestYouMainActivity"
    tools:showIn="@layout/activity_test_you_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro_text"
                android:textColor="@color/cardview_light_background"
                android:textSize="25dp"
                android:layout_weight="0.85" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="92dp"
                android:src="@drawable/logo"
                android:layout_gravity="right"
                android:layout_weight="0.15"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_text"
                android:textColorHint="@color/icons"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:password="true"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_text"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos_text"
                />

            <Button
                android:id="@+id/btnDoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                android:background="@color/primary_dark"
                android:textColor="@color/cardview_light_background"
                android:layout_marginTop="30dp"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
