<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TestYouMainActivity"
    tools:showIn="@layout/activity_test_you_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_name"
            android:textColor="@color/cardview_light_background"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            />
        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:background="@color/primary_dark"
            android:textColor="@color/cardview_light_background"
            android:layout_marginTop="30dp"
            />
        <Button
            android:id="@+id/btnIniciarSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:background="@color/primary_dark"
            android:textColor="@color/cardview_light_background"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

</RelativeLayout>
