<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TestYouMainActivity"
    tools:showIn="@layout/activity_test_you_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="92dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textColor="@color/cardview_light_background"
                android:textSize="20dp"
                android:gravity="center"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_text"
                android:textColorHint="@color/cardview_light_background"
                android:textColor="@color/cardview_light_background"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:password="true"
                android:textColor="@color/cardview_light_background"
                android:textColorHint="@color/cardview_light_background"
                />
            <Button
                android:id="@+id/btnIniciarSesionLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:background="@color/primary_dark"
                android:textColor="@color/cardview_light_background"
                android:layout_marginTop="30dp"
                />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                android:text="Iniciar Sesion con Google"
                android:layout_marginTop="5dp"
                tools:visibility="gone" />

            <com.facebook.login.widget.LoginButton
                xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/connectWithFbButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_marginTop="5dp"
                facebook:com_facebook_login_text="@string/facebookButton"

                />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
