<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TestYouMainActivity"
    tools:showIn="@layout/activity_test_you_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="82dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            >

            <ImageView
                android:layout_width="96dp"
                android:layout_height="132dp"
                android:src="@drawable/user"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/cardview_light_background"
                android:textSize="20dp"
                android:gravity="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/star2" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/star2" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profesion"
                android:textColor="@color/cardview_light_background"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_simulacro"
                android:background="@color/primary_dark"
                android:textColor="@color/cardview_light_background"
                android:layout_marginTop="70dp"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
